[gd_scene load_steps=28 format=3 uid="uid://b01axphphb3sk"]

[ext_resource type="Script" uid="uid://b321veh5c3xks" path="res://enviroment/main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://buok0w254t0wh" path="res://player/player.tscn" id="1_ig7tw"]
[ext_resource type="Shader" uid="uid://bqvkpetder5il" path="res://enviroment/ocean.gdshader" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://cighyvs18l5tc" path="res://enviroment/enviroment.gd" id="3_272bh"]
[ext_resource type="Environment" uid="uid://drbxgywq0qt61" path="res://enviroment/nightsky.tres" id="4_7mycd"]
[ext_resource type="Script" uid="uid://imm8cpwki36x" path="res://enemies/enemy_manager.gd" id="6_7mycd"]
[ext_resource type="Script" uid="uid://7uaew4c5agmf" path="res://enemies/blood_manager.gd" id="7_iwxnw"]
[ext_resource type="Script" uid="uid://b2bubm60x2024" path="res://enemies/waves/wave.gd" id="7_mnei3"]
[ext_resource type="Script" uid="uid://srpjqh8ic1bs" path="res://enviroment/under_player.gd" id="7_wholn"]
[ext_resource type="Script" uid="uid://dgpn46n0fcjjg" path="res://general/item_manager.gd" id="9_r57w7"]

[sub_resource type="PlaneMesh" id="PlaneMesh_0xm2m"]
size = Vector2(500, 500)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0xm2m"]
noise_type = 4
fractal_type = 2
fractal_octaves = 1
fractal_gain = 1.0
metadata/_preview_in_3d_space_ = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_h2yge"]
width = 2000
height = 2000
in_3d_space = true
generate_mipmaps = false
seamless = true
bump_strength = 1.5
noise = SubResource("FastNoiseLite_0xm2m")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_iwxnw"]
noise_type = 4
fractal_type = 2
fractal_octaves = 1
fractal_gain = 1.0
metadata/_preview_in_3d_space_ = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mnei3"]
width = 2000
height = 2000
in_3d_space = true
seamless = true
bump_strength = 1.5
noise = SubResource("FastNoiseLite_iwxnw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h2yge"]
render_priority = 0
shader = ExtResource("2_0xm2m")
shader_parameter/resolution = 12500.0
shader_parameter/albedo = Color(0, 0.517647, 0.698039, 1)
shader_parameter/metallic = 0.023
shader_parameter/roughness = 1.0
shader_parameter/center_position = Vector2(0.5, 0.5)
shader_parameter/fractal = SubResource("NoiseTexture2D_h2yge")
shader_parameter/fractal_mipmaps = SubResource("NoiseTexture2D_mnei3")
shader_parameter/paused = false
shader_parameter/time_frame = 0.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_7mycd"]
exposure_multiplier = 1.566

[sub_resource type="BoxShape3D" id="BoxShape3D_wholn"]
size = Vector3(10, 1, 10)

[sub_resource type="Resource" id="Resource_r57w7"]
script = ExtResource("7_mnei3")
harphish_amount = 3
charger_amount = 0
puffer_amount = 0
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_2tjdi"]
script = ExtResource("7_mnei3")
harphish_amount = 2
charger_amount = 1
puffer_amount = 0
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_85gc2"]
script = ExtResource("7_mnei3")
harphish_amount = 5
charger_amount = 2
puffer_amount = 0
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_amknw"]
script = ExtResource("7_mnei3")
harphish_amount = 5
charger_amount = 4
puffer_amount = 0
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_2pj8u"]
script = ExtResource("7_mnei3")
harphish_amount = 4
charger_amount = 3
puffer_amount = 1
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_mnei3"]
script = ExtResource("7_mnei3")
harphish_amount = 5
charger_amount = 5
puffer_amount = 2
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_hn2mp"]
script = ExtResource("7_mnei3")
harphish_amount = 10
charger_amount = 3
puffer_amount = 0
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_2bvhf"]
script = ExtResource("7_mnei3")
harphish_amount = 6
charger_amount = 5
puffer_amount = 1
metadata/_custom_type_script = "uid://b2bubm60x2024"

[sub_resource type="Resource" id="Resource_s5tlb"]
script = ExtResource("7_mnei3")
harphish_amount = 7
charger_amount = 2
puffer_amount = 1
metadata/_custom_type_script = "uid://b2bubm60x2024"

[node name="Main" type="Node3D"]
script = ExtResource("1_1bvp3")

[node name="Enviroment" type="Node" parent="."]
script = ExtResource("3_272bh")

[node name="Ocean" type="MeshInstance3D" parent="Enviroment"]
unique_name_in_owner = true
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0.5)
mesh = SubResource("PlaneMesh_0xm2m")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_h2yge")

[node name="WorldEnviroment" type="WorldEnvironment" parent="Enviroment"]
unique_name_in_owner = true
environment = ExtResource("4_7mycd")
camera_attributes = SubResource("CameraAttributesPractical_7mycd")

[node name="Sun_Day" type="DirectionalLight3D" parent="Enviroment"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
light_energy = 2.0
light_angular_distance = 1.0
sky_mode = 2

[node name="Sun_Set" type="DirectionalLight3D" parent="Enviroment"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.999391, 0.0348995, 0, -0.0348995, 0.999391, 0, -6.10915, 0)
visible = false
light_color = Color(1, 0.564706, 0.0509804, 1)
light_angular_distance = 1.0
light_specular = 10.0
sky_mode = 2

[node name="SunSetEffect" type="DirectionalLight3D" parent="Enviroment/Sun_Set"]
light_color = Color(1, 0.564706, 0.0509804, 1)
light_energy = 2.0
light_angular_distance = 1.0
light_specular = 10.0
sky_mode = 1

[node name="Moon" type="DirectionalLight3D" parent="Enviroment"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.304033, 0.952661, 0, -0.952661, 0.304033, 0, 0, 0)
light_color = Color(0.905882, 1, 1, 1)
light_energy = 0.5
light_indirect_energy = 0.0
sky_mode = 2

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 8.18612, 2.53532, 0.0288675)

[node name="UnderPlayer" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00938547, 5.65923)
collision_layer = 8
collision_mask = 0
script = ExtResource("7_wholn")

[node name="Collision" type="CollisionShape3D" parent="UnderPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.490372, 0)
shape = SubResource("BoxShape3D_wholn")
debug_color = Color(0.505882, 0, 0.129412, 0.909804)

[node name="BloodManager" type="Node3D" parent="."]
script = ExtResource("7_iwxnw")

[node name="ItemManager" type="Node3D" parent="."]
script = ExtResource("9_r57w7")

[node name="EnemyManager" type="Node3D" parent="."]
script = ExtResource("6_7mycd")
max_fishes = 15
max_chargers = 5
max_puffers = 3
tutorial = Array[ExtResource("7_mnei3")]([SubResource("Resource_r57w7"), SubResource("Resource_2tjdi"), SubResource("Resource_85gc2"), SubResource("Resource_amknw"), SubResource("Resource_2pj8u")])
endless = Array[ExtResource("7_mnei3")]([SubResource("Resource_mnei3"), SubResource("Resource_hn2mp"), SubResource("Resource_2bvhf"), SubResource("Resource_s5tlb")])

[connection signal="wave_changed" from="EnemyManager" to="Player" method="wave_changed"]
